<resources>
    <string name="app_name">WordsReminder</string>
    <string name="new_word">New word</string>
    <string name="translation">Translation</string>
    <string name="save">Save</string>
    <string name="my_profile_str">Profile</string>
    <string name="my_words_str">Word list</string>
    <string name="training_str">Training</string>
    <string name="friends_str">Friends</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="wait_message">Waiting…</string>
    <string name="input">Your input: %1$s</string>
    <string name="language_id_error">Failed to identify language</string>
    <string name="language">Identified language(s): %1$s</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button">Add word</string>
    <string name="add_new_word">Add new word</string>
    <string name="practice_str">Practice</string>
    <string name="empty_space">" "</string>
    <string name="select_list">Select list</string>
    <string name="avatar_image">avatar_image</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="edit_profile_name">edit_profile_name</string>
    <string name="change">change</string>
    <string name="check">CHECK</string>
    <string name="fab_content_desc">add new word</string>
    <string name="delete_text_word">delete text word</string>
    <string name="delete_text_translation">delete text translation</string>
    <string name="google_translation">google translation</string>
    <string name="learning_language">Learning language</string>
    <string name="main_language">Main language</string>
    <string name="select_daily_load">Select your daily load</string>
    <string name="wrong_answer">wrong answer</string>
    <string name="check_answer">check answer</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="english">English</string>
    <string name="english22">English22</string>
    <string name="fragment_words_list">fragment_words_list</string>
    <string name="delete">Delete</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="interface_language">Interface language</string>
    <string name="select_interface_language">Select interface language</string>
    <string name="close">close</string>
    <string name="words_selection">WORDS_SELECTION</string>
    <string name="all_words">All words</string>
    <string name="zero">0</string>
    <string name="daily_progress">0/3</string>
    <string name="learned_words">Learned words</string>
    <string name="being_studied_words">Words being studied</string>
    <string name="select_notification_time">Select notification time</string>
    <string name="reload">Reload</string>
    <string name="show">Show</string>
    <string name="enter_answer_hint">Enter the answer here</string>
    <string name="hide">Hide</string>
    <string name="part_of_speech">Part of speech</string>
    <string name="definitions">Definitions:</string>
    <string name="definition">definition</string>
    <string name="example">example</string>
    <string name="synonym">synonym</string>
    <string name="antonym">antonym</string>
    <string name="meaning">meaning</string>
    <string name="wrong_toast">Something went wrong</string>
    <string name="examples">Examples:</string>
    <string name="synonyms">Synonyms:</string>
    <string name="antonyms">Antonyms:</string>
    <string name="add_definition">add definition</string>
    <string name="empty_field_warning">Put something in the field, please</string>
    <string name="add_example">Add example</string>
    <string name="add_synonym">Add synonym</string>
    <string name="add_antonym">Add antonym</string>
    <string name="reload_dictionary">Reload from server</string>
    <string name="channel_name">channel01</string>
    <string name="channel_description">channel_description01</string>
    <string name="say_new_word">Say the new word</string>
    <string name="try_again">Try again</string>
    <string name="unknown_error">unknown error</string>
    <string name="translate_progress">Translating..</string>
    <string-array name="daily_load_arr">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="learn_main_lang_arr">
        <item>English</item>
        <item>Українська</item>
    </string-array>
    <string-array name="interface_lang_arr">
        <item>English</item>
        <item>Українська</item>
    </string-array>

</resources>