<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PracticeFragment">

    <ProgressBar
        android:id="@+id/progress_bar_pre_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ProgressBar>

    <TextView
        android:id="@+id/tv_definition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="false"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/et_practice_ans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_definition"
        android:inputType="text"
        android:visibility="invisible"
        android:autofillHints="enter the answer here"
        android:labelFor="@id/tv_definition"
        android:hint="@string/enter_answer_hint"
        />

    <Button
        android:id="@+id/btn_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reload"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ibtn_reload"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button"
        android:contentDescription="@string/reload"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_refresh"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/et_practice_ans"
        app:layout_constraintTop_toBottomOf="@+id/tv_definition">

    </ImageButton>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_practice_list"
        android:name="com.alex.words_reminder.TrainingFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="148dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/et_practice_ans"
        tools:context=".fragments.TrainingFragment"
        tools:layout_editor_absoluteX="16dp"
        tools:listitem="@layout/practice_item" />

  <!--  <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progress_bar_pre_loading" />
-->
    <Button
        android:id="@+id/btn_check_ans_practice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/check_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>